// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbContainer renders a driver site correctly with intermediate breadcrumb and with project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-6:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-6:active:before,
.emotion-6:hover:before,
.emotion-6:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:active,
.emotion-6:hover {
  color: #3D4F58;
}

.emotion-6:active:before,
.emotion-6:hover:before {
  background-color: #E7EEEC;
}

.emotion-6:focus {
  color: #1A567E;
}

.emotion-6:focus:before {
  background-color: #C5E4F2;
}

.emotion-7 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-6"
      tabindex="0"
    >
      <div
        class="emotion-7"
      >
        <svg
          aria-label="Ellipsis Icon"
          class=""
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm5 0a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm6.75 1.75a1.75 1.75 0 1 0-3.5 0 1.75 1.75 0 0 0 3.5 0Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/languages/csharp/"
        target="_self"
      >
        <span>
          C#/.NET
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/"
        target="_self"
      >
        <span>
          C#/.NET Driver
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/usage-examples/"
        target="_self"
      >
        <span>
          Usage Examples
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly as a docs homepage 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-6:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-6:active:before,
.emotion-6:hover:before,
.emotion-6:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:active,
.emotion-6:hover {
  color: #3D4F58;
}

.emotion-6:active:before,
.emotion-6:hover:before {
  background-color: #E7EEEC;
}

.emotion-6:focus {
  color: #1A567E;
}

.emotion-6:focus:before {
  background-color: #C5E4F2;
}

.emotion-7 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-6"
      tabindex="0"
    >
      <div
        class="emotion-7"
      >
        <svg
          aria-label="Ellipsis Icon"
          class=""
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm5 0a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm6.75 1.75a1.75 1.75 0 1 0-3.5 0 1.75 1.75 0 0 0 3.5 0Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Atlas Device SDK for C++
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Application Services - C++ SDK
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly with intermediate breadcrumb, no project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-6:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-6:active:before,
.emotion-6:hover:before,
.emotion-6:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:active,
.emotion-6:hover {
  color: #3D4F58;
}

.emotion-6:active:before,
.emotion-6:hover:before {
  background-color: #E7EEEC;
}

.emotion-6:focus {
  color: #1A567E;
}

.emotion-6:focus:before {
  background-color: #C5E4F2;
}

.emotion-7 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  overflow: hidden;
  text-wrap: nowrap;
  text-overflow: ellipsis;
}

.emotion-10:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-10:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-6"
      tabindex="0"
    >
      <div
        class="emotion-7"
      >
        <svg
          aria-label="Ellipsis Icon"
          class=""
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm5 0a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm6.75 1.75a1.75 1.75 0 1 0-3.5 0 1.75 1.75 0 0 0 3.5 0Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-10"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly with no intermediate breadcrumbs, has project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-6:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-6:active:before,
.emotion-6:hover:before,
.emotion-6:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:active,
.emotion-6:hover {
  color: #3D4F58;
}

.emotion-6:active:before,
.emotion-6:hover:before {
  background-color: #E7EEEC;
}

.emotion-6:focus {
  color: #1A567E;
}

.emotion-6:focus:before {
  background-color: #C5E4F2;
}

.emotion-7 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-6"
      tabindex="0"
    >
      <div
        class="emotion-7"
      >
        <svg
          aria-label="Ellipsis Icon"
          class=""
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm5 0a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm6.75 1.75a1.75 1.75 0 1 0-3.5 0 1.75 1.75 0 0 0 3.5 0Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Atlas Device SDK for C++
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Application Services - C++ SDK
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
